kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-php
  namespace: prod
spec:
  selector:
    matchLabels:
      app: kube-php
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-php
    spec:
      containers:
        - name: kube-php
          image: docker.io/sameg14/kubernetes-example-php-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: kube-php
  namespace: prod
spec:
  selector:
    app: kube-php
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-php
  namespace: prod
spec:
  hosts:
    - "kube-php.flokubernetes.com"
  gateways:
    - default-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: kube-php
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-php-env
  namespace: prod
spec:
  hosts:
    - "kube-php.prod.flokubernetes.com"
  gateways:
    - default-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: kube-php
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-php-leg
  namespace: prod
spec:
  hosts:
    - "*"
  gateways:
    - default-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/kube-php/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: kube-php
            port:
              number: 3000
